--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,34 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="full"></h1>
+     <!-- шапка -->
+    <header>
+        <nav>
+        <a href="" lang="en">WebStudio </a>
+        <ul>
+            <li><a href="">Студия</a></li>
+            <li>Портфолио</li>
+            <li>Контакты</li>
+        </ul>
+        <ul>
+            <li><a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+        <h1 class="full"></h1>
+
+        </section>
+
+    </main>
+
+    <footer>
+
+    </footer>
 
 </body>
 </html>
