додала Футер і зміни nav

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-     <!-- шапка -->
+     <!-- header-->
     <header>
         <nav>
         <a href="" lang="en">WebStudio </a>
@@ -16,12 +16,13 @@
             <li>Портфолио</li>
             <li>Контакты</li>
         </ul>
+        </nav>
         <ul>
             <li><a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
-        </nav>
+        
     </header>
 
     <main>
@@ -31,10 +32,19 @@
         </section>
 
     </main>
-
-    <footer>
-
-    </footer>
+<!--Footer -->
+    <footer class="full">
+        <div>
+          <a href=""><span class="accent">Web</span>Studio</a>
+          <address>
+            <ul>
+              <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+              <li><a href="mailto:info@example.com">info@example.com</a></li>
+              <li><a href="tel:380991111111">+38 099 111 11 11</a></li>
+            </ul>
+           </address>
+        </div>
+      </footer>
 
 </body>
 </html>
