--- a/index.html
+++ b/index.html
@@ -21,16 +21,75 @@
             <li><a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
-        </ul>
-        
+        </ul> 
     </header>
 
     <main>
-        <section>
-        <h1 class="full"></h1>
-
-        </section>
-
+        <!--Hero -->
+    <section>
+        <h1 class="full">Эффективные решения для вашего бизнеса</h1>
+        <button class="button">Заказать услугу</button>
+    </section>
+    <section>
+        <h2 class="full">Особенности к деталям </h2>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+    </section>
+    <section>
+        <h2 class="task-list">Чем мы занимаемся</h2>
+        <ul>
+            <li>
+                <img src="./images/img-1.jpg" alt="Работа с планшетом и клавиатурою" width="370" height="294">
+            </li>
+            <li>
+                <img src="./images/img-2.jpg" alt="Работа с ноутбуком и телефоном" width="370" height="294" >
+            </li>
+            <li>
+                <img src="./images/img-3.jpg" alt="Работа с планшетом" width="370" height="294" >
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>Наша команда</h2>
+        <ul>
+            <li>
+                <img src="./images/img-4.jpg" alt="Игорь Демьяненко" width="270" height="260">
+                <h3>Игорь Демьяненко</h3>
+                <p lang="en">Product Designer</p>
+            </li>
+            <li>
+                <img src="./images/img-5.jpg" alt="Ольга Репина" width="270" height="260">
+                <h3>Ольга Репина</h3>
+                <p lang="en">Frontend Developer</p>
+            </li>
+            <li>
+                <img src="./images/img-6.jpg" alt="Николай Тарасов" width="270" height="260">
+                <h3>Николай Тарасов</h3>
+                <p lang="en">Marketing</p>
+            </li>
+            <li>
+                <img src="./images/img-7.jpg" alt="Михаил Ермаков" width="270" height="260">
+                <h3>Михаил Ермаков</h3>
+                <p lang="en">UI Designer</p>
+            </li>
+        </ul>
+    </section>
     </main>
 <!--Footer -->
     <footer class="full">
