--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <button class="button">Заказать услугу</button>
     </section>
     <section>
-        <h2 class="full">Особенности к деталям </h2>
+        <!--Заголовок для ассистивных технологий-->
+        <h2 class="full">Преимущество студии </h2>
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
