--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <a href="" lang="en">WebStudio </a>
         <ul>
             <li><a href="">Студия</a></li>
-            <li>Портфолио</li>
-            <li>Контакты</li>
+            <li><a href="">Портфолио</a></li> 
+            <li><a href="">Контакты</a></li>
         </ul>
         </nav>
         <ul>
@@ -98,7 +98,7 @@
           <a href=""><span class="accent">Web</span>Studio</a>
           <address>
             <ul>
-              <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+              <li><a href="https://goo.gl/maps/iAnGkHz59hrHcrNM6">г. Киев, пр-т Леси Украинки, 26</a></li>
               <li><a href="mailto:info@example.com">info@example.com</a></li>
               <li><a href="tel:380991111111">+38 099 111 11 11</a></li>
             </ul>
